# bevy_points

./: Cargo.toml  LICENSE  README.md
examples/: scene.rs
src/: lib.rs  material.rs  mesh.rs  plugin.rs
src/shaders/: points.wgsl
